# face-detector

./: CMakeLists.txt  README.md  box.cpp  box.hpp  constants.hpp  main.cpp  utils.cpp  utils.hpp
extra/data/: opencv_face_detector.pbtxt
